--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.7.1"
-  }
+  },
+  "devDependencies": {}
 }
